--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
     />
 
+    <title>Svelte Simple Calendar</title>
+
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-white text-gray-800 font-sans min-h-dvh">
