--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="bg-white text-gray-800 font-sans min-h-dvh">
+  <body data-sveltekit-preload-data="hover" class="min-h-dvh bg-white font-sans text-gray-800">
     <div>%sveltekit.body%</div>
   </body>
 </html>
