--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap"
+    />
 
     <title>Svelte Simple Calendar</title>
 
