--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,10 @@
 
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="min-h-dvh bg-white font-sans text-gray-800">
+  <body
+    data-sveltekit-preload-data="hover"
+    class="min-h-dvh bg-white font-sans text-gray-800"
+  >
     <div>%sveltekit.body%</div>
   </body>
 </html>
